# dl

./: CMakeLists.txt  CMakeSettings.json  dl.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  settings_dialog.ui  settingsdialog.cpp  settingsdialog.h
dl/: CMakeLists.txt  dl.cpp  dl.h  htmlparser.cpp  htmlparser.h  main.cpp
tests/: CMakeLists.txt  test1.cpp
